--- a/pom.xml
+++ b/pom.xml
@@ -4,16 +4,71 @@
     <groupId>com.singleton</groupId>
     <artifactId>com.singleton.dynamic.builder</artifactId>
     <version>1.0.0-SNAPSHOT</version>
+
+    <properties>
+        <jacoco.plugin.version>0.7.7.201606060606</jacoco.plugin.version>
+    </properties>
+    
+    <ciManagement>
+        <system>Travis CI</system>
+        <url>https://travis-ci.org/dynamic-builder/dynamic-builder</url>
+    </ciManagement>
+
     <dependencies>
+        <!-- TEST -->
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.12</version>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.hamcrest</groupId>
             <artifactId>hamcrest-all</artifactId>
             <version>1.3</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.jacoco</groupId>
+                <artifactId>jacoco-maven-plugin</artifactId>
+                <version>${jacoco.plugin.version}</version>
+                <executions>
+                    <execution>
+                        <id>default-prepare-agent</id>
+                        <goals>
+                            <goal>prepare-agent</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+              <groupId>org.eluder.coveralls</groupId>
+              <artifactId>coveralls-maven-plugin</artifactId>
+              <version>4.2.0</version>
+            </plugin>
+        </plugins>
+    </build>
+
+    <reporting>
+        <plugins>
+            <plugin>
+                <groupId>org.jacoco</groupId>
+                <artifactId>jacoco-maven-plugin</artifactId>
+                <version>${jacoco.plugin.version}</version>
+                <reportSets>
+                  <reportSet>
+                    <reports>
+                      <!-- select non-aggregate reports -->
+                      <report>report</report>
+                    </reports>
+                  </reportSet>
+                </reportSets>
+            </plugin>
+        </plugins>
+    </reporting>
+
 </project>
