--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,7 @@
     <version>1.0.0-SNAPSHOT</version>
 
     <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <jacoco.plugin.version>0.7.7.201606060606</jacoco.plugin.version>
     </properties>
     
@@ -31,6 +32,7 @@
     </dependencies>
 
     <build>
+        
         <plugins>
             <plugin>
                 <groupId>org.jacoco</groupId>
